# py-flat-finder

./: .gitignore  .pre-commit-config.yaml  .pwd  Dockerfile  LICENSE  README.md  mail.py  main.py  pyproject.toml  repository.csv  requirements.txt  workbench.ipynb
app/: abstracts.py  config.py  flats.py  main.py  main_old.py  test.py  utils.py
app/cars/: config.py  notifier.py  parser.py  runner.py  scraper.py
app/classes/: flats.py
app/data/: cars.csv  flats.csv
app/flats/: config.py  flat_notifier.py  flat_parser.py  flat_runner.py  flat_scraper.py  parser.py  runner.py
data/: cars.csv  flats.csv  items.csv
test/: conftest.py  test_sample.py
test/flats/: conftest.py  examples.py  test_flat_scraper.py
